[gd_scene load_steps=13 format=3 uid="uid://c4vbmtt2m3ahn"]

[ext_resource type="Script" path="res://scenes/modules/module0/sprints/dang_nhap.gd" id="1_x3vvi"]
[ext_resource type="Theme" uid="uid://cvxiiwjwnm8g" path="res://assets/resources/themes/theme_field.tres" id="1_xjris"]
[ext_resource type="FontFile" uid="uid://dm4u5rvan3e7u" path="res://assets/resources/fonts/arialbd.TTF" id="2_am4lo"]
[ext_resource type="Texture2D" uid="uid://48oqmcqbatb5" path="res://assets/sprites/ui/buttons/user.png" id="2_vhno8"]
[ext_resource type="Texture2D" uid="uid://dtmtk1i8w3f1n" path="res://assets/sprites/ui/buttons/password.png" id="3_7y1ih"]
[ext_resource type="Theme" uid="uid://cpltx4lyxm334" path="res://assets/resources/themes/theme_textinput.tres" id="4_8fiie"]
[ext_resource type="Theme" uid="uid://d076pw6j3i3cd" path="res://assets/resources/themes/theme_check.tres" id="7_i3jcl"]
[ext_resource type="Theme" uid="uid://cylkaowtg36ei" path="res://assets/resources/themes/theme_checkbutton.tres" id="7_muih7"]
[ext_resource type="Theme" uid="uid://brdiy7ttotod7" path="res://assets/resources/themes/theme_button.tres" id="11_6481p"]
[ext_resource type="Theme" uid="uid://c3af2k5us1nw1" path="res://assets/resources/themes/theme_textbutton.tres" id="12_ayemt"]
[ext_resource type="Theme" uid="uid://b0f85lxjcftcx" path="res://assets/resources/themes/theme_popup.tres" id="13_sypa4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtg0b"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="DangNhap" type="VBoxContainer"]
offset_right = 512.0
offset_bottom = 250.0
script = ExtResource("1_x3vvi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = -3

[node name="BufferTop" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.02

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="BufferLeft" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="PanelContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.628906, 0.996094, 1)
theme_override_fonts/font = ExtResource("2_am4lo")
theme_override_font_sizes/font_size = 36
text = "Đăng Nhập"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buffer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Icon" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.35
theme_override_constants/separation = 4

[node name="TenDangNhap" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Icon"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xjris")
theme_override_font_sizes/font_size = 24
disabled = true
text = "Tên Đăng Nhập"
icon = ExtResource("2_vhno8")
flat = true
alignment = 0
expand_icon = true

[node name="MatKhau" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Icon"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xjris")
theme_override_font_sizes/font_size = 24
disabled = true
text = "Mật Khẩu"
icon = ExtResource("3_7y1ih")
flat = true
alignment = 0
expand_icon = true

[node name="DienTaiKhoan" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 4

[node name="TenDangNhap" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/DienTaiKhoan"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("4_8fiie")
theme_override_font_sizes/font_size = 24
caret_blink = true

[node name="MatKhau" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/DienTaiKhoan"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("4_8fiie")
theme_override_font_sizes/font_size = 24
secret = true
caret_blink = true

[node name="Buffer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("7_muih7")
text = "Hiển thị mật khẩu"
alignment = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Captcha" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xjris")
theme_override_font_sizes/font_size = 24
disabled = true
text = "Captcha"
icon = ExtResource("3_7y1ih")
flat = true
alignment = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="DienCaptcha" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_8fiie")
theme_override_font_sizes/font_size = 24
caret_blink = true

[node name="MauCaptcha" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("4_8fiie")
theme_override_font_sizes/font_size = 24
theme_override_styles/read_only = SubResource("StyleBoxFlat_mtg0b")
editable = false
caret_blink = true

[node name="NhoButton" type="CheckBox" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("7_i3jcl")
text = "Nhớ tài khoản"
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="DangNhap" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("11_6481p")
theme_override_font_sizes/font_size = 24
text = "ĐĂNG NHẬP"

[node name="DangKy" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("12_ayemt")
text = "Chưa có tài khoản? Đăng ký!"
flat = true

[node name="BufferLeft" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="BufferRight" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="BufferBottom" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.02

[node name="Popup" type="Node2D" parent="."]

[node name="PopupMenu" type="AcceptDialog" parent="Popup"]
title = "Thông báo"
initial_position = 1
size = Vector2i(320, 160)
popup_window = true
min_size = Vector2i(200, 70)
theme = ExtResource("13_sypa4")

[connection signal="toggled" from="VBoxContainer/HBoxContainer/PanelContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/DangNhap" to="." method="_on_dang_nhap_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/DangKy" to="." method="_on_dang_ky_pressed"]
[connection signal="confirmed" from="Popup/PopupMenu" to="." method="_on_popup_menu_confirmed"]
